// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should override user provided attributes that aren't className 1`] = `
<div
  class="slide-panel pad-this-slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
  data-test-attr="ahoy thar"
>
  <div
    class="main"
  />
  <div
    aria-hidden="true"
    class="panel"
  />
</div>
`;

exports[`should render a SlidePanel with a fullscreen state 1`] = `
<div
  class="slide-panel is-fullscreen"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
  />
  <div
    aria-hidden="true"
    class="panel"
  />
</div>
`;

exports[`should render a SlidePanel with an open state 1`] = `
<div
  class="slide-panel is-open"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
  />
  <div
    aria-hidden="false"
    class="panel"
  />
</div>
`;

exports[`should render a SlidePanel with fill 1`] = `
<div
  class="slide-panel fill"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
  />
  <div
    aria-hidden="true"
    class="panel"
  />
</div>
`;

exports[`should render a SlidePanel with main content 1`] = `
<div
  class="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
  >
    <p>
      Main Content
    </p>
  </div>
  <div
    aria-hidden="true"
    class="panel"
  />
</div>
`;

exports[`should render a SlidePanel with panel content 1`] = `
<div
  class="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
  />
  <div
    aria-hidden="true"
    class="panel"
  >
    <p>
      Panel Content
    </p>
  </div>
</div>
`;

exports[`should render a SlidePanel with panelBehavior = overlay 1`] = `
<div
  class="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
  />
  <div
    aria-hidden="true"
    class="panel"
  />
</div>
`;

exports[`should render a SlidePanel with panelBehavior = squish 1`] = `
<div
  class="slide-panel"
  data-slide-panel-panel-behavior="squish"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
  />
  <div
    aria-hidden="true"
    class="panel"
  />
</div>
`;

exports[`should render a SlidePanel with panelPosition = end 1`] = `
<div
  class="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
  />
  <div
    aria-hidden="true"
    class="panel"
  />
</div>
`;

exports[`should render a SlidePanel with panelPosition = start 1`] = `
<div
  class="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="start"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
  />
  <div
    aria-hidden="true"
    class="panel"
  />
</div>
`;

exports[`should render a SlidePanel with panelSize = large 1`] = `
<div
  class="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="large"
>
  <div
    class="main"
  />
  <div
    aria-hidden="true"
    class="panel"
  />
</div>
`;

exports[`should render a SlidePanel with panelSize = small 1`] = `
<div
  class="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
  />
  <div
    aria-hidden="true"
    class="panel"
  />
</div>
`;

exports[`should render a SlidePanel with the given extra attributes 1`] = `
<div
  class="slide-panel pad-this-slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
  data-test-attr="ahoy thar"
  id="my-slide-panel"
>
  <div
    class="main"
  />
  <div
    aria-hidden="true"
    class="panel"
  />
</div>
`;

exports[`should render a default SlidePanel with no props 1`] = `
<div
  class="slide-panel"
  data-slide-panel-panel-behavior="overlay"
  data-slide-panel-panel-position="end"
  data-slide-panel-panel-size="small"
>
  <div
    class="main"
  />
  <div
    aria-hidden="true"
    class="panel"
  />
</div>
`;
